# cpp_PJC_studies

./: CMakeLists.txt  main2.cpp
cw01/: main.cpp  zad1.cpp
cw02/: cwiczenia.cpp  main.cpp  odwracanie.cpp  refactoring_after.cpp  refactoring_before.cpp
cw03/: core_nowealgorytmy.cpp  zaza.cpp
cw04/: cwiczenia.cpp
cw05/: core.cpp  cwiczenia.cpp
cw05SFML/: cwiczenia.cpp
w01/: main.cpp
